tests/baselines/reference/unusedTypeParameters2.errors.txt
tests/cases/compiler/unusedTypeParameters2.ts(2,15): error TS6133: Variable 'typeparameter1' has never been used.


==== tests/cases/compiler/unusedTypeParameters2.ts (1 errors) ====
    
    class greeter<typeparameter1, typeparameter2> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: Variable 'typeparameter1' has never been used.
        private x: typeparameter2;
    
        public function1() {
            this.x;
        }
    }